src/snapshots/fuzz_crash/fuzz_crash_003.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
 = "te
~~~PROBLEMS
Misplaced carriage return character

MISSING HEADER

The module header is missing.

 = "te
Note: This is a parse error. Check your syntax.
INVALID STATEMENT

This statement is not allowed at the top level.

 = "te
Only definitions, type annotations, and imports are allowed at the top level.
~~~TOKENS
OpAssign(1:2-1:3),StringStart(1:4-1:5),StringPart(1:5-1:7),EndOfFile(1:7-1:7),
~~~PARSE
(file (1:2-1:7)
	(malformed_header (1:2-1:3) "missing_header")
	(statements
		(string (1:4-1:7) (string_part (1:5-1:7) "te"))))
~~~FORMATTED
"te"
~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END